--- a/index.html
+++ b/index.html
@@ -43,30 +43,78 @@
 					</div>
 				</div>
 			</div>
-			<div class="section" style="background: #999;">
-				<div class="about_left">
-					<img src="img/about.jpg"/>
+			<div class="section">
+				<div class="about_bth">
+					关于刘凯宇
 				</div>
-				<div class="about_right">
-					<div class="about_introduce active">
-						<div class="about_Introduce">
-							<span>作为一名前端工程师，我精通html、css语言，我的职责是制作标准优化的代码，并增加交互动态功能，开发JavaScript以及Flash模块，同时结合后台开发技术模拟整体效果，进行丰富互联网的Web开发，致力于通过技术改善用户体验,作为团队的一员，我团队意识强，擅长沟通交流，有一个良好的人际关系，能够与同事更好的配合，使项目更完美。 </span>
-						</div>
+				<div class="about">
+					<div class="about_head">
+						<h1>关于刘凯宇</h1>
+						<p>刘凯宇，来自山西，97年前端工程师。熟练掌握前端知识，比如html，css等。一直在学习的道路上，加油<br />能让我学习的动力是自己的无知</p>
 					</div>
-					<div class="about_data">
-						<div class="about_Introduce">
-							<span>
-								<p>我从山西来<br /> 出生于香港回归年<br />毕业于山西工程职业技术学院<br /> 一名优秀的90后前端工程师<br />
-							</span>
-						</div>
+					<div class="about_left">
+						<img src="img/about.jpg" alt="" />
 					</div>
-					<ul class="about_papgs">
-						<li class="active"></li>
-						<li></li>
-					</ul>
+					<div class="about_right">
+						<h1>我，前端工程师</h1>
+						<p>我从山西来<br /> 出生于1997年<br />毕业于山西工程职业技术学院<br /> 一名优秀的90后前端工程师<br />作为一名前端工程师，我精通html、css语言，我的职责是制作标准优化的代码，并增加交互动态功能，开发JavaScript以及Flash模块，同时结合后台开发技术模拟整体效果，进行丰富互联网的Web开发，致力于通过技术改善用户体验 <br />作为团队的一员，我团队意识强，擅长沟通交流，有一个良好的人际关系，能够与同事更好的配合，使项目更完美。
+						</p>
+					</div>
 				</div>
 			</div>
-			<div class="section">3</div>
+			<div class="section">
+				<div class="skill">
+					<div class="skill_left"></div>
+					<div class="scene">
+						<ul>
+							<li>
+								<div class="skill_con">
+									<i>&#xe618;</i>
+									<!--<h2>Html语言</h2>-->
+									<p>超文本标记语言<br />通过标记符号来标记要显示的网页中的各个内容 一种由浏览器解释执行的语言</p>
+								</div>
+							</li>
+							<li>
+								<div class="skill_con">
+									<i>&#xe62a;</i>
+									<!--<h2>Css技术</h2>-->
+									<p> 层叠样式表<br />控制网页样式<br />由浏览器解释执行</p>
+								</div>
+							</li>
+							<li>
+								<div class="skill_con">
+									<i>&#xe6ce;</i>
+									<!--<h2>Web布局</h2>-->
+									<p>利用html语言、css语言，熟练的使用所学的各种知识，比如：盒子模型、flex布局、选择器、定位等。搭建一个网站</p>
+								</div>
+							</li>
+							<li>
+								<div class="skill_con">
+									<i>&#xe6b6;</i>
+									<!--<h2>移动端</h2>-->
+									<p>移动互联网终端是指通过无线网络技术上网接入互联网的终端设备,熟练的搭建一个app</p>
+								</div>
+							</li>
+							<li>
+								<div class="skill_con">
+									<i>&#xe64c;</i>
+									<!--<h2>响应式</h2>-->
+									<p>一个网站能够兼容多个终端——而不是为每个终端做一个特定的版本，兼容各个终端，面对不同的分辨率页面灵活</p>
+								</div>
+							</li>
+							<li>
+								<div class="skill_con">
+									<i>&#xe62d;</i>
+									<!--<h2>PS技术</h2>-->
+									<p>Adobe Photoshop，简称“PS”，是由Adobe Systems开发和发行的图像处理软件。</p>
+								</div>
+							</li>
+						</ul>
+						<div class="scene_left"></div>
+						<div class="scene_right"></div>
+					</div>
+				</div>
+			</div>
 			<div class="section">
 				<div class="slide"></div>
 				<div class="slide"></div>
@@ -79,5 +127,7 @@
 	<script src="js/jquery-3.2.1.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/jquery.fullPage.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/jquery.transit.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
+
 </html>
