--- a/index.html
+++ b/index.html
@@ -115,11 +115,39 @@
 					</div>
 				</div>
 			</div>
-			<div class="section">
-				<div class="slide"></div>
-				<div class="slide"></div>
-				<div class="slide"></div>
-				<div class="slide"></div>
+			<div class="section section4">
+				<ul id="hexGrid">
+					<li class="hex">
+						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
+							<h1>这是小米</h1>
+							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+						</a>
+					</li>
+					<li class="hex">
+						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
+							<h1>这是小米</h1>
+							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+						</a>
+					</li>
+					<li class="hex">
+						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
+							<h1>这是小米</h1>
+							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+						</a>
+					</li>
+					<li class="hex">
+						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
+							<h1>这是小米</h1>
+							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+						</a>
+					</li>
+					<li class="hex">
+						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
+							<h1>这是小米</h1>
+							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+						</a>
+					</li>
+				</ul>
 			</div>
 			<div class="section">5</div>
 		</div>
