--- a/index.html
+++ b/index.html
@@ -64,48 +64,57 @@
 			</div>
 			<div class="section">
 				<div class="skill">
-					<div class="skill_left"></div>
+					<div class="skill_right">
+						<div class="box">
+							<canvas id="" width="200" height="200"></canvas>
+							<canvas id="" width="200" height="200"></canvas>
+							<canvas id="" width="200" height="200"></canvas>
+							<canvas id="" width="200" height="200"></canvas>
+							<canvas id="" width="200" height="200"></canvas>
+							<canvas id="" width="200" height="200"></canvas>
+						</div>
+					</div>
 					<div class="scene">
 						<ul>
 							<li>
 								<div class="skill_con">
 									<i>&#xe618;</i>
-									<!--<h2>Html语言</h2>-->
+									<p style="font-size: 40px;margin-bottom: 20px;">Html语言</p>
 									<p>超文本标记语言<br />通过标记符号来标记要显示的网页中的各个内容 一种由浏览器解释执行的语言</p>
 								</div>
 							</li>
 							<li>
 								<div class="skill_con">
 									<i>&#xe62a;</i>
-									<!--<h2>Css技术</h2>-->
+									<p style="font-size: 40px;margin-bottom: 20px;">Css技术</p>
 									<p> 层叠样式表<br />控制网页样式<br />由浏览器解释执行</p>
 								</div>
 							</li>
 							<li>
 								<div class="skill_con">
-									<i>&#xe6ce;</i>
-									<!--<h2>Web布局</h2>-->
-									<p>利用html语言、css语言，熟练的使用所学的各种知识，比如：盒子模型、flex布局、选择器、定位等。搭建一个网站</p>
+									<i>&#xe691;</i>
+									<p style="font-size: 40px;margin-bottom: 20px;">JS语言</p>
+									<p>JavaScript一种直译式脚本语言，它的解释器被称为JavaScript引擎，广泛用于客户端的脚本语言，用来给HTML网页增加动态功能</p>
 								</div>
 							</li>
 							<li>
 								<div class="skill_con">
 									<i>&#xe6b6;</i>
-									<!--<h2>移动端</h2>-->
+									<p style="font-size: 40px;margin-bottom: 20px;">移动端</p>
 									<p>移动互联网终端是指通过无线网络技术上网接入互联网的终端设备,熟练的搭建一个app</p>
 								</div>
 							</li>
 							<li>
 								<div class="skill_con">
 									<i>&#xe64c;</i>
-									<!--<h2>响应式</h2>-->
+									<p style="font-size: 40px;margin-bottom: 20px;">响应式</p>
 									<p>一个网站能够兼容多个终端——而不是为每个终端做一个特定的版本，兼容各个终端，面对不同的分辨率页面灵活</p>
 								</div>
 							</li>
 							<li>
 								<div class="skill_con">
 									<i>&#xe62d;</i>
-									<!--<h2>PS技术</h2>-->
+									<p style="font-size: 40px;margin-bottom: 20px;">PS技术</p>
 									<p>Adobe Photoshop，简称“PS”，是由Adobe Systems开发和发行的图像处理软件。</p>
 								</div>
 							</li>
@@ -116,40 +125,86 @@
 				</div>
 			</div>
 			<div class="section section4">
-				<ul id="hexGrid">
-					<li class="hex">
-						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
-							<h1>这是小米</h1>
-							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+				<div class="production">
+					<div class="hex">
+						<a class="hexIn" href="https://liukaiyu-swag.github.io/mi/" target="_blank">
+							<img src="img/1.png" alt="" />
+							<h1>小米</h1>
+							<p>Some sample text about the article this hexagon leads to</p>
 						</a>
-					</li>
-					<li class="hex">
-						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
-							<h1>这是小米</h1>
-							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+					</div>
+					<div class="hex">
+						<a class="hexIn" href="https://liukaiyu-swag.github.io/China-Mobile/" target="_blank">
+							<img src="img/2.png" alt="" />
+							<h1>移动</h1>
+							<p>Some sample text about the article this hexagon leads to</p>
 						</a>
-					</li>
-					<li class="hex">
-						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
-							<h1>这是小米</h1>
-							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+					</div>
+					<div class="hex">
+						<a class="hexIn" href="https://liukaiyu-swag.github.io/todo/" target="_blank">
+							<img src="img/7.png" alt="" />
+							<h1>To Do</h1>
+							<p>Some sample text about the article this hexagon leads to</p>
 						</a>
-					</li>
-					<li class="hex">
-						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
-							<h1>这是小米</h1>
-							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+					</div>
+					<div class="hex">
+						<a class="hexIn" href="https://liukaiyu-swag.github.io/qiyezhan/" target="_blank">
+							<img src="img/3.png" alt="" />
+							<h1>企业站</h1>
+							<p>Some sample text about the article this hexagon leads to</p>
 						</a>
-					</li>
-					<li class="hex">
-						<a class="hexIn" href="#"> <img src="img/xiaomi1.jpg" alt="" />
-							<h1>这是小米</h1>
-							<p>国内小型电商网站的模版，初学前端时期临摹作品</p>
+					</div>
+					<div class="hex">
+						<a class="hexIn" href="#">
+							<img src="img/4.png" alt="" />
+							<h1>This is a title</h1>
+							<p>Some sample text about the article this hexagon leads to</p>
 						</a>
-					</li>
-				</ul>
+					</div>
+				</div>
 			</div>
-			<div class="section">5</div>
+			<div class="section">
+				<div class="relation">
+					<div class="mask-top"></div>
+
+					<div class="mask-bottom">
+						<div class="lianxi-z">
+							<input type="text" name="name" placeholder="您的名字" class="contact-input" />
+							<input type="email" name="email" placeholder="您的邮箱" class="contact-input" />
+							<textarea rows="6" class="contact-input">您想说些....</textarea>
+							<input type="submit" value="提交" class="tijiao">
+						</div>
+						<div class="lianxi-y">
+							<div class="lianxi-y-n">
+								<div class="lianxi-icon">
+									<span><i>&#xe9ff;</i></span>
+								</div>
+								<div class="lianxi-wz">
+									<p>山西省太原市小店区平阳路学府街口凯通大厦优逸客</p>
+								</div>
+							</div>
+							<div class="lianxi-y-n">
+								<div class="lianxi-icon">
+									<span><i>&#xe656;</i></span>
+								</div>
+								<div class="lianxi-wz">
+									<p>155-3640-2370 <br />150-3402-4724</p>
+								</div>
+							</div>
+							<div class="lianxi-y-n">
+								<div class="lianxi-icon">
+									<span><i>&#xe614;</i></span>
+								</div>
+								<div class="lianxi-wz">
+									<p>1106923807@qq.com
+										<br />1106923807@qq.com
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 	<script src="js/jquery-3.2.1.js" type="text/javascript" charset="utf-8"></script>
