--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<h1>Hello</h1>
 						<br />
 						<br />
-						<span>我是一名全栈工程师</span>
+						<span>我是一名前端工程师</span>
 					</div>
 					<div class="home_mouse">
 						<div class="scroll"></div>
